--- a/Hi3HelperCore.Http.csproj
+++ b/Hi3HelperCore.Http.csproj
@@ -6,4 +6,16 @@
     <Configurations>Debug;Release;Publish</Configurations>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <DebugType>embedded</DebugType>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <DebugType>embedded</DebugType>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Publish|x64'">
+    <DebugType>embedded</DebugType>
+  </PropertyGroup>
+
 </Project>
