--- a/Hi3Helper.Http.csproj
+++ b/Hi3Helper.Http.csproj
@@ -5,6 +5,7 @@
 		<Platforms>x64</Platforms>
 		<Configurations>Debug;Release;Publish</Configurations>
 		<DebugType>embedded</DebugType>
+		<AllowUnsafeBlocks>True</AllowUnsafeBlocks>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -18,5 +19,15 @@
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Publish|x64'">
 		<Optimize>True</Optimize>
 	</PropertyGroup>
+
+	<ItemGroup>
+		<Compile Remove="Test\**" />
+		<EmbeddedResource Remove="Test\**" />
+		<None Remove="Test\**" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <PackageReference Include="Crc32.NET" Version="1.2.0" />
+	</ItemGroup>
 
 </Project>
