--- a/Hi3Helper.Http.csproj
+++ b/Hi3Helper.Http.csproj
@@ -4,6 +4,7 @@
 		<TargetFrameworks>netstandard2.0;net6.0;net7.0</TargetFrameworks>
 		<Platforms>x64</Platforms>
 		<Configurations>Debug;Release;Publish</Configurations>
+		<DebugType>embedded</DebugType>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
