Fix lots of threading and overhead issues
+ Using the new callback method for retrying mechanism
+ Fixing noisy background throw due to overhead on the old TaskExtension's Timeout method
+ Bring back the code support down to .NET Standard 2.0 / .NET Framework 4.6.2
+ Switching to directly read the data instead of waiting the buffer to full from the network stream
+ Fixing incorrect define constants usage
+ Start the download session sequence fully asynchronously, even on .NET Standard 2.0 support

--- a/Hi3Helper.Http.Universal.csproj
+++ b/Hi3Helper.Http.Universal.csproj
@@ -2,10 +2,16 @@
 
 	<PropertyGroup>
 		<TargetFramework>netstandard2.0</TargetFramework>
-		<Platforms>AnyCPU</Platforms>
+		<Platforms>x64</Platforms>
+		<LangVersion>8.0</LangVersion>
 		<Configurations>Debug;Release</Configurations>
+		<Nullable>disable</Nullable>
 		<DebugType>portable</DebugType>
 		<IsTrimmable>True</IsTrimmable>
+		<IsAotCompatible>True</IsAotCompatible>
+		<Version>1.5.0</Version>
+		<AssemblyVersion>1.5.0</AssemblyVersion>
+		<AssemblyName>Hi3Helper.Http</AssemblyName>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -20,6 +26,12 @@
 		<Compile Remove="Test\**" />
 		<EmbeddedResource Remove="Test\**" />
 		<None Remove="Test\**" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="System.Net.Http" Version="*" />
+		<PackageReference Include="System.Threading.Tasks.Dataflow" Version="*" />
+		<PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="*" />
 	</ItemGroup>
 
 </Project>
