--- a/Hi3Helper.Http.csproj
+++ b/Hi3Helper.Http.csproj
@@ -11,7 +11,14 @@
 		<IsAotCompatible>True</IsAotCompatible>
 		<Version>1.5.0</Version>
 		<AssemblyVersion>1.5.0</AssemblyVersion>
-		<AssemblyName>Hi3Helper.Http</AssemblyName>
+        <!-- Assembly Info Properties -->
+        <AssemblyName>Hi3Helper.Http</AssemblyName>
+        <ProductName>Hi3Helper.Http</ProductName>
+        <Product>Hi3Helper.Http</Product>
+        <Description>Http downloader with Multi-Session support</Description>
+        <Company>Collapse Launcher Team</Company>
+        <Authors>$(Company). neon-nyan, Cry0, bagusnl, shatyuka, gablm.</Authors>
+        <Copyright>Copyright 2022-2024 $(Company)</Copyright>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
