--- a/Hi3Helper.Http.csproj
+++ b/Hi3Helper.Http.csproj
@@ -3,14 +3,15 @@
 	<PropertyGroup>
 		<TargetFramework>net8.0</TargetFramework>
 		<Platforms>x64</Platforms>
-		<LangVersion>8.0</LangVersion>
+		<LangVersion>9.0</LangVersion>
 		<Configurations>Debug;Release</Configurations>
-		<Nullable>disable</Nullable>
+		<Nullable>enable</Nullable>
 		<DebugType>portable</DebugType>
 		<IsTrimmable>True</IsTrimmable>
 		<IsAotCompatible>True</IsAotCompatible>
-		<Version>1.5.0</Version>
-		<AssemblyVersion>1.5.0</AssemblyVersion>
+		<Version>2.0.0</Version>
+		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+		<AssemblyVersion>2.0.0</AssemblyVersion>
         <!-- Assembly Info Properties -->
         <AssemblyName>Hi3Helper.Http</AssemblyName>
         <ProductName>Hi3Helper.Http</ProductName>
